cabal-version:      2.4
name:               scheme-hs
version:            0.1.0.0
synopsis:           An R5RS Scheme interpreter in Haskell
license:            MIT
author:             Dean
build-type:         Simple

executable scheme-hs
    main-is:          Main.hs
    other-modules:    Types
                    , Parser
                    , Env
                    , Eval
                    , Primitives
    build-depends:    base >= 4.14 && < 5
                    , parsec >= 3.1
                    , mtl >= 2.2
                    , containers >= 0.6
                    , array >= 0.5
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite scheme-hs-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    ParserSpec
                    , TypesSpec
                    , IntegrationSpec
                    , Types
                    , Parser
                    , Env
                    , Eval
                    , Primitives
    build-depends:    base >= 4.14 && < 5
                    , parsec >= 3.1
                    , mtl >= 2.2
                    , containers >= 0.6
                    , array >= 0.5
                    , hspec >= 2.7
                    , QuickCheck >= 2.14
    hs-source-dirs:   test, src
    default-language: Haskell2010
    ghc-options:      -Wall
